Overflow-bug

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -11,8 +11,8 @@
 }
 
 html, body {
-    max-width: 100vw;
-    max-height: 100vh;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
 }
 
@@ -197,16 +197,18 @@ footer, footer a {
 
     /* Slide Config Inicio */
 
-    /* .slide img {
+    .slide img {
         height: 100%;
-    } */
+    }
 
     /* Slide Config Fim */
 }
 
 @media screen and (max-width: 620px) {
-    body {
+
+    #wrapper {
         overflow-x: hidden;
+        position: relative;
     }
 
     nav {
@@ -219,6 +221,7 @@ footer, footer a {
 
     .nav-list {
         position: absolute;
+        min-width: 0px;
         z-index: 1;
         top: 8vh;
         right: 0;
